invoices/invoices-mf/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoices-mf
  labels:
    app: invoices-mf
spec:
  type: ClusterIP
  ports:
    - name: invoices-mf
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: invoices-mf
