invoices/invoices-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoices-mf-service
  labels:
    app: invoices-mf-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  selector:
    app: invoices-mf-deployment
