invoices/invoices-mf/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoices-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: invoices-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invoices-mf
                port:
                  number: 80
